policies/seccomp-profile-ephemeralcontainers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-seccomp-profile-ephemeralcontainers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods/ephemeralcontainers"]
  variables:
    - name: allowedSeccompTypes
      expression: >
        ["RuntimeDefault","Localhost"]
  validations:
    - expression: >
        (has(object.spec.os) &&
         has(object.spec.os.name) &&
         object.spec.os.name.lowerAscii() == "windows") ||
        !has(object.spec.ephemeralContainers) ||
        object.spec.ephemeralContainers.all(ec,
          !has(ec.securityContext) ||
          !has(ec.securityContext.seccompProfile) ||
          !has(ec.securityContext.seccompProfile.type) ||
          variables.allowedSeccompTypes.exists(t, t == ec.securityContext.seccompProfile.type)
        )
      message: >
        spec.ephemeralContainers[*].securityContext.seccompProfile.type must be undefined, RuntimeDefault, or Localhost.
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-ephemeralcontainers-namespace-optout-warn
spec:
  policyName: check-seccomp-profile-ephemeralcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["baseline"]
        - key: validating-admission-policies.kolteq.com/seccomp-profile-ephemeralcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-ephemeralcontainers-namespace-optin-warn
spec:
  policyName: check-seccomp-profile-ephemeralcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: seccomp-profile-ephemeralcontainers.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-ephemeralcontainers-namespace-optout-audit
spec:
  policyName: check-seccomp-profile-ephemeralcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["baseline"]
        - key: validating-admission-policies.kolteq.com/seccomp-profile-ephemeralcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-ephemeralcontainers-namespace-optin-audit
spec:
  policyName: check-seccomp-profile-ephemeralcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: seccomp-profile-ephemeralcontainers.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-ephemeralcontainers-namespace-optout-deny
spec:
  policyName: check-seccomp-profile-ephemeralcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["baseline"]
        - key: validating-admission-policies.kolteq.com/seccomp-profile-ephemeralcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-ephemeralcontainers-namespace-optin-deny
spec:
  policyName: check-seccomp-profile-ephemeralcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: seccomp-profile-ephemeralcontainers.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
